# projet-cesi-jeux-de-la-vie

./: .gitignore  CMakeLists.txt  Projet.html  README.md
examples/: blinker.txt  glider.txt  gosper_gun.txt  obstacles.txt  pulsar.txt
include/cell/: AliveState.hpp  Cell.hpp  CellState.hpp  DeadState.hpp  ObstacleAliveState.hpp  ObstacleDeadState.hpp
include/game/: Game.hpp
include/grid/: Grid.hpp
include/gui/: GUIController.hpp  GUIRenderer.hpp
include/io/: FileHandler.hpp
include/patterns/: Patterns.hpp
include/rules/: ClassicRule.hpp  Rule.hpp
src/: main_console.cpp  main_gui.cpp
src/cell/: AliveState.cpp  Cell.cpp  CellState.cpp  DeadState.cpp  ObstacleAliveState.cpp  ObstacleDeadState.cpp
src/game/: Game.cpp
src/grid/: Grid.cpp
src/gui/: GUIController.cpp  GUIRenderer.cpp
src/io/: FileHandler.cpp
src/rules/: ClassicRule.cpp  Rule.cpp
src/tests/: test_main.cpp
